re-align load test swith load profiler + disable gc logs + increase warmup time to 90s
Signed-off-by: Ludovic Orban <lorban@bitronix.be>